--- a/src/Board/index.css
+++ b/src/Board/index.css
@@ -9,8 +9,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 500px;
-  height: 500px;
+  width: 480px;
+  height: 480px;
 
 }
 .board-header {
@@ -22,5 +22,8 @@
   color: white;
 }
 .board-container {
-
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
 }
