--- a/src/App.css
+++ b/src/App.css
@@ -2,34 +2,23 @@
   text-align: center;
   height: 100%;
   width: 100%;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.app-header {
+  font-family: 'Righteous', cursive;
+  font-size: 45px;
+  color: #540804;
+}
+.poop-icon {
+  color: brown;
+  margin: 10px;
+}
+.broom-icon {
+  color: goldenrod;
+  margin: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
