--- a/src/Board/Cell.css
+++ b/src/Board/Cell.css
@@ -2,14 +2,10 @@
   width: 30px;
   height: 30px;
   background-color: #76B041;
-  border-right: 0.5px solid #19323C;
-  border-bottom: 0.5px solid #19323C;
-  border-top: 0.5px solid #D6D9CE;
-  border-left: 0.5px solid #D6D9CE;
+  border: 0.5px solid green;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 2px;
   color: #19323C;
   font-weight: bold;
 }
@@ -20,7 +16,6 @@
   background-color: #D6D9CE;
 }
 .cell--flagged {
-  /* background-color: pink; */
   color: red;
 }
 .cell--bomb {
