--- a/src/Board/index.css
+++ b/src/Board/index.css
@@ -5,10 +5,7 @@
 }
 .board {
   background-color: green;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin: 20px;
   width: 480px;
   height: 480px;
 
@@ -16,14 +13,24 @@
 .board-header {
   width: 100%;
   height: 50px;
-  background-color: #00A8E8;
   display: flex;
   justify-content: space-evenly;
+  background-color: #17BEBB;
   color: white;
+  border: none;
+  padding: 10px;
 }
 .board-container {
   width: 100%;
   height: 100%;
   display: flex;
   flex-wrap: wrap;
+}
+.new-game-button {
+  border-radius: 8px;
+  background-color:yellowgreen;
+  border: none;
+  color: white;
+  padding: 8px;
+  cursor: pointer;
 }
