Fixed bug that allowed cell to be flagged if already selected

--- a/src/Board/Cell.css
+++ b/src/Board/Cell.css
@@ -16,12 +16,12 @@
   height: 48px;
 }
 .cell--selected {
-  background-color: #D6D9CE;
+  background-color: whitesmoke;
 }
 .cell--flagged {
   color: red;
 }
 .cell--bomb {
-  background-color: #D6D9CE;
+  background-color: whitesmoke;
   color: brown;
 }
