--- a/src/Board/index.css
+++ b/src/Board/index.css
@@ -34,3 +34,22 @@
   padding: 8px;
   cursor: pointer;
 }
+.game-over-modal {
+  width: 400px;
+  height: 300px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  right: auto;
+  bottom: auto;
+  transform: translate(-50%, -50%);
+  border-radius: 8px;
+}
+.modal-overlay {
+  position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(0, 0, 0, 0.2);
+}
