--- a/src/Board/GameOverModal.css
+++ b/src/Board/GameOverModal.css
@@ -8,6 +8,11 @@
   justify-content: space-evenly;
   align-items: center;
 }
+.game-over-message {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .game-over h1 {
   color: brown;
   margin: 10px;
